# CohortHelperAI

./: .gitignore  CONTRIBUTING.md  PROJECT_LOG.md  README.md  project_plan.md  test_enhanced_retrieval.py
cohortrag_engine/: .dockerignore  .env.example  .env.template  CHANGELOG.md  Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  main.py  pyproject.toml  server.py
cohortrag_engine/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
cohortrag_engine/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
cohortrag_engine/.github/workflows/: ci.yml  draft-release.yml  release.yml
cohortrag_engine/cli/: __init__.py  benchmark.py  validate.py
cohortrag_engine/core/: .!93005!evaluation.py  async_ingestion.py  cached_retrieval.py  evaluation.py  ingestion.py  retrieval.py
cohortrag_engine/docs/: OPEN_SOURCE_READINESS.md  SUCCESS_METRICS_VALIDATION.md  VECTOR_STORE_MIGRATION.md  docker_deployment.md  install.md  migration.md  project_structure.md  self_host.md
cohortrag_engine/scripts/: build_and_test.py  deploy_to_pypi.py
cohortrag_engine/tests/: run_tests.py  test_chunking.py  test_evaluation.py  test_models.py
cohortrag_engine/utils/: benchmarks.py  chunking.py  cost_modeling.py  performance.py  query_expansion.py  reranking.py  success_metrics.py
